# Kimera-Semantics-with-Segmentation

./: .gitmodules  LICENSE  README.md
Kimera-Semantics-with-Segmentation/: CMakeLists.txt  package.xml
Kimera-Semantics-with-Segmentation/launch/: kimera_with_segmentation.launch
